0.0.15 

* support for stream feature
* examples on `between' feature
* minor changes related debugging information presentation

0.0.14 2016-01-21

match_l environment variable is respected

0.0.13 2016-01-18

Forgot to update POD, not it's uptodate

0.0.12 2016-01-18

Test suite ini file path could be passed by \`-c' parameter

0.0.11 2016-01-17

Regenerated META stuff hopefully to show distribution abstract at metacpan recent page ( unfortunately it was
empty for version 0.0.10 )


0.0.10

* new features:

    * Test suite ini files support

    * Strun client - new parameter \`--host'

    * Hooks API -  \`set_stdout' could be called more than once

* breaking changes:

    * Strun client - \`prove_opts' now is called as \`prove'


0.0.9 2015-11-14 ... 

* small documentation changes

0.0.8 2015-11-08

* this version is fully compatible with the latest version of Outthentic::DSL (0.0.3)

0.0.7 2015-10-30

* Outthentic::DSL - now is a distinct module
* made use of Outthentic::DSL
* documentation changed for the sake of usage of Outthentic::DSL

0.0.6 2015-10-23

* fix unit test issue ( use_ok("Outthentic") ) - https://rt.cpan.org/Public/Bug/Display.html?id=107961

0.0.5 2015-10-23

* --match_l options - in TAP output truncate matching strings to {match_l} bytes

0.0.4 2015-10-23

* Long lines in TAP output are truncated 

0.0.3 2015-10-23

* Missing META.yml fixed

0.0.2 2015-10-23

* Internal changes for bin/strun - improved downstories/upstories recognize method 
* Reorganized examples 
* Cleaned markdown documentation
* Pod generated from markdown doc

0.0.1 2015-10-22

* Initial release.
