@@ -1,8 +1,14 @@
 bin/strun
 Changes
 examples/.exists
+examples/between-keep-order/story.check
+examples/between-keep-order/story.pl
+examples/between-multiple-expressions/story.check
+examples/between-multiple-expressions/story.pl
 examples/between-nested/story.check
 examples/between-nested/story.pl
+examples/between-stream/story.check
+examples/between-stream/story.pl
 examples/between/story.check
 examples/between/story.pl
 examples/hello/story.check
@@ -31,13 +37,14 @@ examples/run-story/story.pm
 examples/story-data-share/story.check
 examples/story-data-share/story.pl
 examples/story-data-share/story.pm
-examples/text-blocks-dynamic-size/story.check
-examples/text-blocks-dynamic-size/story.pl
-examples/text-blocks-dynamic-size/story.pm
+examples/text-blocks-stream/story.check
+examples/text-blocks-stream/story.pl
+examples/text-blocks-stream2/story.check
+examples/text-blocks-stream2/story.pl
+examples/text-blocks-stream3/story.check
+examples/text-blocks-stream3/story.pl
 examples/text-blocks/story.check
 examples/text-blocks/story.pl
-examples/text-blocks2/story.check
-examples/text-blocks2/story.pl
 examples/validators/captures/story.check
 examples/validators/captures/story.pl
 examples/within/story.check
