@@ -1,0 +1,9 @@
+print "
+foo
+    1
+    2
+    1
+    2
+bar
+"
+
