@@ -1,0 +1,21 @@
+print "
+    foo
+        0
+        1
+        A
+    bar
+
+    foo
+        2
+        4
+        6
+        8
+    bar
+
+    foo
+        1
+        3
+        B
+    bar
+"
+
